  the like.
- Spellcasting monsters have access to a larger variety of dangerous
  spells.
- Engraving "The Yellow Sign" will cause bad things to happen to you and those
  around you.
- Monster wielding behavior was changed so monsters are more aggressive about
  wielding new items.
- VENOM_CLASS and Q_CLASS are referred to differently in game.
- Nymphs and Kops are generated with names.
- Nephi's grudge patch has been implemented and expanded, so monsters will
  attack certain other monsters they are opposed to. This dovetails nicely with
  altar changes.
- Dragons have been made subtly more difficult. Hostile monsters with the "roar"
  sound will occasionally roar when the player is nearby, aggravating monsters
  on the level. Additionally, dragons are counted as having hands for the
  purposes of using defensive and utility items.
- Monsters now use a much wider array of items. This includes wands of wishing.
- Transforming into a lycanthrope now angers guards.
- Runeswords and tsurugis can be randomly generated, but they are incredibly
  rare.
- Vampire mages, Shimmering Dragons, and Vorpal Jabberwocks un-deferred.
- Some of the less powerful or less unique quest nemeses have been changed to
  be more challenging or interesting (see below).
- Bribing demon lords has been greatly expanded. They now can potentially ask
  for powerful items in your inventory instead of gold, and you can also use
  decks of cards to gamble on your immortal soul with them. Challenging them
  with a deck of fate is a Bad Idea.
- All demon lords have had their AC significantly lowered.
- The wailing of the banshee message was changed slightly to account for the
  addition of wailing banshees.
- The addition of so many artifacts changes things. On one hand, the player is
  more likely to find artifacts throughout the dungeon, due to many new artifact
  types. On the other hand, adding artifacts made the Astral Plane slightly more